--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "svelte-strip-whitespace",
+  "name": "svelte-trim",
   "version": "0.0.1",
   "description": "Removes unwanted whitespace from the markup section of svelte files.",
   "main": "out/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "run-p preprocess docs",
+    "build": "run-p preprocess",
     "check": "run-p check:typescript check:eslint",
     "check:eslint": "eslint \"./src\"",
     "check:typescript": "tsc --noEmit",
@@ -13,9 +13,8 @@
     "clean:preprocessed": "if [ -d \"./out\" ] ; then rm -r \"./out\"; fi",
     "preprocess": "run-s clean:preprocessed preprocess:typescript",
     "preprocess:typescript": "tsc",
-    "docs": "run-p docs:md",
-    "docs:md": "typedoc --out docs/md --plugin typedoc-plugin-markdown src --excludeNotExported --excludeExternals --excludePrivate --mode file --excludeNotDocumented --hideGenerator --disableSources",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "prepublishOnly": "run-p check"
   },
   "keywords": [
     "svelte"
@@ -27,27 +26,25 @@
   "author": "firefish5000",
   "license": "ISC",
   "devDependencies": {
-    "@tdi/eslint-config-base": "0.0.8",
+    "@tdi/eslint-config-base": "0.0.9",
     "@types/estree": "0.0.45",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
-    "eslint": "^7.11.0",
-    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint": "^7.12.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
-    "eslint-import-resolver-node": "^0.3.4",
     "eslint-plugin-import": "^2.22.1",
     "estree-walker": "^2.0.1",
-    "magic-string": "^0.25.7",
     "npm-run-all": "^4.1.5",
     "periscopic": "^2.0.2",
-    "svelte": "^3.29",
+    "svelte": "^3.29.4",
     "tslib": "^2.0.3",
-    "typedoc": "^0.19.2",
-    "typedoc-plugin-markdown": "^3.0.11",
     "typescript": "^4.0.3"
   },
   "peerDependencies": {
     "svelte": "^3.29"
   },
-  "types": "./out/index.d.ts"
+  "types": "./out/index.d.ts",
+  "dependencies": {
+    "magic-string": "^0.25.7"
+  }
 }
